2000-08-03  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Updated to latest (July 31st) info

2000-08-02  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.
	* Documentation/news.tmpl.texi: Likewise.
	* Documentation/todo.tmpl.texi: Likewise.
	* ANNOUNCE, BUGS, NEWS, README: Regenerate

2000-08-02  Adam Fedor  <fedor@gnu.org>

	* Testing/nsconnection_client.m: Rewrite, organize.
	* Testing/nsconnection_server.m: Likewise.

2000-08-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([-removeHandle:]) corrected logic for releasing
	self when port was created and retained by an incoming connection.

2000-08-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSConcreteNumber.m (-compare:): Add return at end to quiet
	compiler warning.

	* Source/NSFileHandle.m: Change +fileHandle... methods to use
	abstracts class's allocWithZone.

	* Source/libgnustep-base.def: Update for new/removed classes.

2000-08-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Correct order of args to
	lastDayOfGregorianMonth()
	* Source/NSPortCoder.m: Handle classes encoded as objects specially.
	* Source/NSArchiver.m: ditto.
	* Source/NNSUnarchiver.m: ditto.

2000-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Foundation/NSDebug.h: removed GS_IMPORT
	* Source/Foundation/NSObjCRuntime.h: ditto
	* Source/Foundation/GSConfig.h.in: ditto

2000-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: implement -cStringLength correctly in terms of
	other methods of the abstract class, rather than making the subclass
	do it.  Cache [-characterAtIndex:] implementation for speed
	throughout.
	* Source/Unicode.m: Remove uslen() function - unused and unsafe.
	Tidied code and optimised a little.
	* Source/Foundation/Unicode.h: Remove uslen()
	* Source/NSNumber.m: Check for nul argument to [-compare:]
	* Source/NSDate.m: ditto